0.02
 - Add check for 'css_class' parameter.
 - Add constructor tests.
 - Add documentation.
 - Improve subroutine argument namess for init() and prepare().
 - Remove 'lang' parameter. Not used.

0.01 2024-04-27T13:21:44+02:00
 - First version.