@@ -31,7 +31,7 @@ no_index:
 requires:
   Class::Utils: 0.02
   Error::Pure: 0.07
-  Mo::utils::CSS: 0.06
+  Mo::utils::CSS: 0.07
   Tags::HTML: 0.08
   perl: 5.8.0
 resources:
