@@ -1,4 +1,5 @@
 0.02
+ - Add check for 'border' parameter.
  - Add check for 'css_class' parameter.
  - Add constructor tests.
  - Add documentation.
